[gd_scene load_steps=14 format=3 uid="uid://dfyswwfb8j6iv"]

[ext_resource type="Script" path="res://player.gd" id="1_3afs5"]
[ext_resource type="PackedScene" uid="uid://b4g77r67peq11" path="res://blob_shadow.tscn" id="2_att33"]
[ext_resource type="Texture2D" uid="uid://df46fn25wxblu" path="res://player/shotgun/spritesheet.png" id="2_ntkbj"]
[ext_resource type="Texture2D" uid="uid://d0h6we75g3l0h" path="res://crosshair.png" id="2_xdhj0"]
[ext_resource type="AudioStream" uid="uid://lqgi4erf48wg" path="res://player/shotgun/fire.wav" id="3_w6ksn"]
[ext_resource type="AudioStream" uid="uid://cy2lhrs5we1a7" path="res://player/shotgun/open.wav" id="6_tknt2"]
[ext_resource type="AudioStream" uid="uid://dam35f8u5f2d5" path="res://player/shotgun/load.wav" id="7_dom6o"]
[ext_resource type="AudioStream" uid="uid://cykqcvgf3tyv3" path="res://player/shotgun/close.wav" id="8_uckjf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_n7pit"]
size = Vector3(1, 1.5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_nlrfb"]
size = Vector3(0.9, 1, 0.9)

[sub_resource type="Animation" id="Animation_nrowk"]
resource_name = "fire"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/WeaponSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 0, 1),
"update": 0,
"values": [0, 9, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/WeaponLight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D/WeaponLight:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [0.0, 2.0, 0.0]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponSounds")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.00360187,
"start_offset": 0.0,
"stream": ExtResource("3_w6ksn")
}, {
"end_offset": 0.0,
"start_offset": 0.0276511,
"stream": ExtResource("6_tknt2")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_dom6o")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_uckjf")
}],
"times": PackedFloat32Array(0, 0.535896, 0.844826, 1.02504)
}

[sub_resource type="Animation" id="Animation_y888d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/WeaponSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/WeaponLight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D/WeaponLight:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_glvp6"]
_data = {
"RESET": SubResource("Animation_y888d"),
"fire": SubResource("Animation_nrowk")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_3afs5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("BoxShape3D_n7pit")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
shape = SubResource("BoxShape3D_nlrfb")
max_results = 1

[node name="WeaponSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tknt2")
volume_db = -12.0
max_polyphony = 4

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="SpotLight3D" type="SpotLight3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.4, 0)
visible = false
light_color = Color(1, 0.973333, 0.92, 1)
light_energy = 4.0
shadow_enabled = true
shadow_bias = 0.01
shadow_blur = 2.5
spot_range = 15.0
spot_angle = 35.0
spot_angle_attenuation = 2.0

[node name="WeaponSprite" type="Sprite3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.7, -1.5)
layers = 2
sorting_offset = 100.0
cast_shadow = 0
billboard = 1
double_sided = false
no_depth_test = true
alpha_cut = 1
texture_filter = 0
texture = ExtResource("2_ntkbj")
vframes = 10

[node name="WeaponLight" type="OmniLight3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
light_color = Color(1, 0.764706, 0.235294, 1)
light_energy = 0.0
shadow_enabled = true
shadow_bias = 0.12
shadow_blur = 2.5
omni_range = 10.0

[node name="Decal" parent="." instance=ExtResource("2_att33")]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xdhj0")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_glvp6")
}
